@@ -3,7 +3,9 @@ export(ggimage)
 export(gglocator)
 export(ggmap)
 export(ggmapplot)
+export(mapdist)
 export(OSM_scale_lookup)
 export(qmap)
+export(revgeocode)
 export(theme_inset)
 export(theme_nothing)
