@@ -301,6 +301,24 @@
 #'   guides(fill = guide_colorbar(barwidth = 1.5, barheight = 10))
 #'   
 #' 
+#'   
+#' 
+#' # neat example with distances
+#' qmap('baylor university', zoom = 14, source = 'osm') + 
+#'   geom_point(data = geocode('marrs mclean science, baylor university'))
+#' 
+#' origin <- 'marrs mclean science, baylor university'
+#' gc_origin <- geocode(origin)
+#' destinations <- c('pat neff hall, baylor university', 'salvation army waco texas',
+#'   'sams club waco texas', 'HEB #087 waco texas')
+#' gc_dests <- geocode(destinations)
+#' (dist <- mapdist(origin, destinations, mode = 'walking'))
+#'  
+#' 
+#'   
+#' 
+#'   
+#' 
 #' 
 #' } 
 ggmapplot <- function(ggmap, fullpage = FALSE, regularize = TRUE, base_layer, maprange = FALSE, expand = FALSE, ...){
