@@ -2,12 +2,17 @@ Version 1.3
 -------------------------------------------------------------------------
 
 New Features -
-  1. geocode now accepts a vector of arguments and returns a data.frame of lat/lons. (thanks to tony tran for suggestion.)
+  1. a total overhaul of the geocode function (with backwards compatability).  geocode can now return many more features such as the address (for when the location is lazy-specified, e.g. "the white house"), a bounding box, and political administrative bodies.
+  2. a reverse geocode function called "revgeocode" is now available.
+  3. mapdist - a function to compute distances on maps using the google maps api.  distances in meters, km, and miles are returned as well as travel times in seconds, minutes and hours based on mode of transportation (driving, bicycling, or walking).
 
 Fixes -
   1. qmap and ggmapplot now deals properly with maprange.
  *2. the coordinate system is now properly set to a mercator projection.
   3. custom version of annotation_custom added (not exported) to allow for placement in and plotting of overlays with mercator projection.
+
+New depends -
+  1. rjson
 
 
 
